# OH-LightFlow

./: .gitignore  ExifUtility使用示例.md  HarmonyOS_C++集成指南.md  PROJECT_ANALYSIS.md  README.md  build-profile.json5  build.bat  build.ps1  hvigorconfig.ts  位置标记系统分析报告.md
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/.preview/: PreviewBuildParam.json
entry/.preview/config/: buildConfig.json
entry/.preview/default/cache/default/default@PreviewArkTS/esmodule/: .tsbuildinfo  .tsbuildinfo.linter  watchCompiler.tsbuildinfo
entry/.preview/default/intermediates/assets/default/ets/: modules.abc  sourceMaps.map
entry/.preview/default/intermediates/loader/default/: loader.json
entry/.preview/default/intermediates/merge_profile/default/: module.json
entry/.preview/default/intermediates/process_profile/default/: module.json
entry/.preview/default/intermediates/res/default/: module.json  resources.index
entry/.preview/default/intermediates/res/default/ids_map/: id_defined.json
entry/oh_modules/libexiftool.so/: index.d.ts  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  libexif_napi.cpp
entry/src/main/ets/components/: PhotoInfoCard.ets
entry/src/main/ets/pages/: Index.ets
entry/src/main/ets/utils/: ExifUtility.ets  ImagePosition.ets  LibExifTool.ets  PermissionMng.ets  SaveImageHelper.ets  imageUtils.ets  utils.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/zh_CN/element/: string.json
(+11 files in other folders)
